# Aventurische-Namensschmiede

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: content_guide.md  observability.md  profession_audit.md  regions_from_aventurische_namen.md
infra/: .env.example  DEPLOYMENT.md  VPS_SETUP.md  docker-compose.prod.yml
ops/nginx/: docker-entrypoint.sh  nginx.conf
ops/observability/: loki.yaml  otel-collector-config.yaml  prometheus.yml
ops/observability/alloy/: config.alloy
scripts/: test_ratelimit.sh
src/namegen/: __init__.py  catalog.py  chargen.py  cli.py  generator.py  interactive.py  loader.py  models.py  output.py  pdf_builder.py  profiles.py
src/namegen/data/: __init__.py  alanfa.toml  amazonen.toml  ambosszwerge.toml  andergast.toml  aranien.toml  auelfen.toml  bornland.toml  ferkina.toml  (+51 more)
tests/: test_chargen.py  test_cli.py  test_generator.py  test_loader.py  test_models.py  test_no_merge_conflict_markers.py  test_nobility.py  test_output.py  test_regions.py  test_web_app_features.py  test_web_generator_observability.py  test_web_generator_routes.py  test_web_observability_endpoints.py  test_web_result_transfer.py
web/: Dockerfile  auth.py  export_bundle.py  main.py  metrics.py  observability.py  observability_utils.py  package.json  pdf_utils.py  result_transfer.py  seo.py  tailwind.config.js
web/routes/: generator.py  regions.py
web/static/: input.css
web/templates/: base.html  datenschutz.html  favourites.html  index.html  rechtliches.html  regions.html
(+35 files in other folders)
